--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ android {
         config {
             keyAlias 'riverManage_key'
             keyPassword 'houzhiqiang160'
-            storeFile file('E:/riverManage/app/riverManageKey.jks')
+//            storeFile file('E:User/Desktop/ShiXun/riverManage/app/riverManageKey.jks')
+            storeFile file('E:/User/Desktop/ShiXun/riverManage/riverManageKey.jks')
             storePassword 'houzhiqiang'
         }
     }
@@ -51,6 +52,9 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.8'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     testCompile 'junit:junit:4.12'
+
+    //展开菜单
+
 }
 
 //dependencies {
