--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,20 @@ android {
             keyAlias 'riverManage_key'
             keyPassword 'houzhiqiang160'
 //            storeFile file('E:User/Desktop/ShiXun/riverManage/app/riverManageKey.jks')
-            storeFile file('E:/riverManage/riverManageKey.jks')
-//            storeFile file('E:/User/Desktop/ShiXun/riverManage/riverManageKey.jks')
+            storeFile file('E:/User/Desktop/ShiXun/riverManage/riverManageKey.jks')
+
+            // CMD 91:6E:CD:72:64:6D:A7:4E:21:42:61:0D:2A:9C:B6:E1:A9:3A:BC:86
+
+
+            //abdeoid studio AE:72:E5:57:CE:2F:C4:FD:37:4D:47:A6:4B:7B:BD:54:3D:14:1E:CE
+
+            //
             storePassword 'houzhiqiang'
         }
     }
     compileSdkVersion 25
     buildToolsVersion "26.0.1"
+//    useLibrary "org.apache.http.legacy"
     defaultConfig {
         applicationId "com.org.rivermanage"
         minSdkVersion 15
@@ -36,8 +43,6 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
-
-
 }
 
 dependencies {
@@ -47,17 +52,18 @@ dependencies {
     })
     //圆形头像
     compile 'com.makeramen:roundedimageview:2.2.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.loopj.android:android-async-http:1.4.8'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     testCompile 'junit:junit:4.12'
+//图片处理
+    compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.3'
 
-    //展开菜单
 
+
+//    compile 'org.xutils:xutils:3.5.0'
+//    compile 'org.apache.httpcomponents:httpmime:4.5.3'
+//    compile 'com.android.support:appcompat-v7:25.3.1'
+//    compile 'com.android.support:recyclerview-v7:23.4.0'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
-
-//dependencies {
-//    compile files('libs/BaiduLBS_Android.jar')
-//}
