--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
             storePassword 'houzhiqiang'
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.1"
 //    useLibrary "org.apache.http.legacy"
     defaultConfig {
@@ -50,6 +50,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+    compile 'com.android.support:appcompat-v7:26.+'//<<<<<<<<<<<<<<<<<<<<<<<<<
+    compile 'com.android.support:design:26.+'//<<<<<<<<<<<<<<<<<<<<<<<<<
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'//<<<<<<<<<<<<<<<<<<<<<<<<<
+    compile 'com.android.support:design:26.+'   //////<<<<<<<<<<<<<<<<<<<<
     //圆形头像
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.google.code.gson:gson:2.8.2'
@@ -59,7 +65,7 @@ dependencies {
 //图片处理
     compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.3'
 
-
+    compile 'com.huangdali:myhttputils1.0:1.3.2'
 
 //    compile 'org.xutils:xutils:3.5.0'
 //    compile 'org.apache.httpcomponents:httpmime:4.5.3'
