--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:name=".base.LocationApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -42,15 +42,17 @@
             </intent-filter>
         </service>
         <activity android:name=".activaty.MainActivity" >
+        </activity>
+        <activity android:name=".activaty.ShowListActivity"/>
+        <activity android:name=".activaty.WelcomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activaty.ShowListActivity"/>
-        <activity android:name=".activaty.WelcomeActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activaty.UploadActivity" />
+        <activity android:name=".activaty.UploadActivity"/>
         <activity android:name=".activaty.GuideActivity" />
         <activity android:name=".activaty.LoginActivity"/>
     </application>
